Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
Description
This showed up in Janitor testing for LU-16709 patch, https://review.whamcloud.com/50530/
The sanity-lnet test introduced in that patch causes Janitor to run tests on that specific test ~20 times exercising the touched test only. All of these runs failed on the same assert.
Running the same test as part of full sanity-lnet suite execution doesn't trigger the assertion failure. Local testing also failed to reproduce the issue.
The assertion implies incomplete clean-up of socklnd peer on NI shutdown or, less likely, memory corruption.
It needs to be determined whether the issue causing the assertion to fail is introduced by LNet code changes LU-16709 patch or only discovered by the test changes introduced in the same patch.
Landed for 2.16